# 3D-Slicer-Extension

./: CMakeLists (1).txt  CMakeLists.txt
MySlicerExtension (1)/: MySlicerExtension.py
